--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.7",
     "uuid": "^8.3.2"
   },
